# dynamit

./: .gitignore  README.md  pyproject.toml
dynamit/: manage.py
dynamit/dynamit/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
dynamit/sklep/: admin.py  apps.py  models.py  signals.py
dynamit/sklep/migrations/: 0001_initial.py
dynamit/sklep/templates/admin/sklep/dostawa/: change_list.html
dynamit/sklep/templates/admin/sklep/typproduktu/: change_form.html
